# avif-coder

./: .gitignore  AAR_INTEGRATION_GUIDE.md  AAR_SIZE_ANALYSIS.md  BUILD_INSTRUCTIONS.md  DECODER_ONLY_SUMMARY.md  GITHUB_ISSUE_DECODER_ONLY.md  LICENSE  README.md  build.gradle  build.gradle.kts  build_all.sh  build_aom.sh  build_dav1d.sh  build_de265.sh  build_heif.sh  build_kvazaar.sh  build_sharpyuv.sh  build_svt.sh  build_x265.sh  build_yuv.sh  gradle.properties  jitpack.yml  settings.gradle
.github/workflows/: build.yml  create_release.yml  mirroring.yaml
app/: build.gradle
app/src/androidTest/java/com/radzivon/bartoshyk/avif/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: alpha_t.avif  bt_2020_pq.avif  extremly_large.avif  hato-wide-gamut-8bit.avif  hato-wide-gamut.avif  hato_custom_icc.avif  hdr_cosmos07296_12bit.avif  heic_icc.heic  pexels-heif.heif  pngtree.avif  result.heic  test_avif.avif  test_avif_12_bitdepth.avif
app/src/main/assets/hdr/: Elevate-hdr.avif  GUM Mall Lights-hdr.avif  Land of the Lost-hdr.avif  Lyrical-hdr.avif  Sea of Umbrellas at Shibuya Crossing-hdr.avif  The Grand Mosque-hdr.avif  Triad-hdr.avif  castle-hdr.avif  club.avif  future city.avif  house on lake.avif
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/radzivon/bartoshyk/avif/: MainActivity.kt
app/src/main/java/com/radzivon/bartoshyk/avif/glide/: AvifCoderByteBufferDecoder.kt  AvifCoderStreamDecoder.kt  AvifGlideModule.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  binding_image_view.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/com/radzivon/bartoshyk/avif/: ExampleUnitTest.kt
avif-coder/: build.gradle  build.gradle.kts  consumer-rules.pro
avif-coder-coil/: build.gradle  build.gradle.kts
avif-coder-coil/src/androidTest/java/com/github/awxkee/avifcoil/: ExampleInstrumentedTest.kt
avif-coder-coil/src/main/: AndroidManifest.xml
avif-coder-coil/src/main/java/com/github/awxkee/avifcoil/: HeifDecoder.kt
avif-coder-coil/src/main/shaders/: HLG_BT2020.comp  SMPTE2084_BT2020.comp  SMPTE2084_P3.comp
avif-coder-coil/src/test/java/com/github/awxkee/avifcoil/: ExampleUnitTest.kt
avif-coder/src/androidTest/java/com/radzivon/bartoshyk/avif/coder/: ExampleInstrumentedTest.kt
avif-coder/src/main/cpp/: AvifDecoderController.cpp  AvifDecoderController.h  CMakeLists.txt  CopyUnalignedRGBA.cpp  HLG.cpp  HLG.h  HalfFloats.h  HardwareBuffersCompat.cpp  HardwareBuffersCompat.h  HeifImageDecoder.cpp  HeifImageDecoder.h  IccRecognizer.cpp  IccRecognizer.h  ImageFrame.h  JniAnimatedController.cpp  JniBitmap.cpp  JniBitmap.h  JniDecoder.cpp  JniEncoder.cpp  JniException.cpp  JniException.h  PerceptualQuantinizer.cpp  PerceptualQuantinizer.h  ReformatBitmap.cpp  ReformatBitmap.h  Rgb1010102.cpp  Rgb1010102.h  RgbaF16bitNBitU8.cpp  RgbaF16bitNBitU8.h  RgbaF16bitToNBitU16.cpp  SizeScaler.cpp  SizeScaler.h  Support.cpp  Support.h  ThreadPool.hpp  VulkanRunner.cpp  VulkanRunner.h  YuvConversion.cpp  YuvConversion.h  aligned_allocator.h  (+29 more)
avif-coder/src/main/cpp/algo/: common.h  concurrency.hpp  fast_math-inl.h  math-inl.h  rational_polynomial-inl.h  sleef-hwy.cpp  sleef-hwy.h
avif-coder/src/main/cpp/avif/: CMakeLists.txt  avif.c  avif.h  codec_svt.c  internal.h  reformat_libsharpyuv.c
avif-coder/src/main/cpp/avif/aom/: aom_codec.h  aom_encoder.h  aomcx.h
avif-coder/src/main/cpp/avif/sharpyuv/: sharpyuv_csp.h
avif-coder/src/main/cpp/colorspace/: AcesToneMapper.cpp  AcesToneMapper.h  CmsApply-inl.h  CmsMath.hpp  CoderCms.cpp  CoderCms.h  ColorMatrix.cpp  ColorMatrix.h  ColorSpaceProfile.h  DataSpaceToNCLX.hpp  FilmicToneMapper.cpp  FilmicToneMapper.h  GamutAdapter.cpp  GamutAdapter.h  HDRTransferAdapter.cpp  HDRTransferAdapter.h  HLG.cpp  HLG.h  ITUR.h  LinearExtendedRec2020.h  LinearSRGBColorspace.h  LogarithmicToneMapper.cpp  LogarithmicToneMapper.h  NEMath.h  Oklab.hpp  PerceptualQuantinizer.cpp  PerceptualQuantinizer.h  Rec2020Colorspace.h  Rec2408ToneMapper.cpp  Rec2408ToneMapper.h  Rec709Colorspace.h  ToneMapper.h  Trc.cpp  Trc.h  colorspace.cpp  colorspace.h  displayP3Colorspace.h  eotf-inl.h
avif-coder/src/main/cpp/hwy/ops/: generic_ops-inl.h
avif-coder/src/main/cpp/icc/: cmsgmt.c  lcms2.def
avif-coder/src/main/cpp/imagebits/: CopyUnalignedRGBA.cpp  CopyUnalignedRGBA.h  HalfFloats.cpp  HalfFloats.h  RGBAlpha.cpp  RGBAlpha.h  Rgb1010102.cpp  Rgb1010102.h  Rgb565.cpp  Rgb565.h  Rgba16.cpp  Rgba16.h  Rgba8ToF16.cpp  Rgba8ToF16.h  RgbaF16bitNBitU8.cpp  RgbaF16bitNBitU8.h  RgbaF16bitToNBitU16.cpp  RgbaF16bitToNBitU16.h  RgbaU16toHF.cpp  RgbaU16toHF.h  ScanAlpha.cpp  ScanAlpha.h  attenuate-inl.h  attenuate_alpha.h  half.cpp  half.hpp
avif-coder/src/main/cpp/libheif/: heif_version.h
avif-coder/src/main/java/com/radzivon/bartoshyk/avif/coder/: AvKind.kt  AvSpeed.kt  AvType.kt  AvifAnimatedDecoder.kt  AvifChromaSubsampling.kt  AvifSpeed.kt  AvifSurfaceMode.kt  Coder.kt  HeifCoder.kt  (+18 more)
avif-coder/src/main/shaders/: GammaOetf.comp  HLG.comp  HLG_BT2020.comp  HLG_P3.comp  SMPTE2084.comp  SMPTE2084_BT2020.comp  SMPTE2084_P3.comp  SMPTE428.comp
avifpixart/: Cargo.toml  README.md  build.rs  build.sh
avifpixart/.cargo/: config.toml
avifpixart/include/: avifweaver.h
avifpixart/src/: av1_encode_android.rs  av2_decode.rs  av2_decode_android.rs  av2_encode_android.rs  box_walker.rs  cvt.rs  heic_decode.rs  heic_decode_android.rs  heic_encode_android.rs  icc.rs  lib.rs  native_color_space.rs  orientation.rs  rgb_to_yuv.rs  scaling.rs  support.rs  tonemapper.rs  unsupported_av2_decode_android.rs  unsupported_encode_android.rs  yuv_ffi.rs
avifpixart/src/ffi/: android_bitmap.rs  bitmap_reader.rs  hardware_buffers.rs  mod.rs
conf/: dav1d_conf_build.sh
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
