[package]
name = "avifweaver"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2"
pic-scale = { version = "0.6.15", default-features = false, features = ["nightly_f16"] }
yuv = { version = "0.8.11", features = ["nightly_f16"], default-features = false }
bytemuck = { version = "1.24", features = ["nightly_float"] }
moxcms = { version = "0.8.0", default-features = false }
gainforge = "0.4.0"

[features]
rdm = ["yuv/rdm", "pic-scale/rdm", "moxcms/neon_shaper_fixed_point_paths", "moxcms/neon_shaper_optimized_paths"]
i8mm = ["pic-scale/nightly_i8mm"]

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = 3  # Optimize for size.
lto = true  # Enable link time optimization
codegen-units = 1  # Reduce parallel code generation units

[build-dependencies]
cbindgen = "0.29.0"